--- a/style.css
+++ b/style.css
@@ -73,6 +73,18 @@ h3 {
 	width: 25%;
 }
 
+#pic6 {
+	width: 25%;
+}
+
+#pic7 {
+	width: 25%;
+}
+
+#pic8 {
+	width: 25%;
+}
+
 #text{
 	display: table-cell;
 	text-align: center;
